First part of LoadRaw algorithm. Re #25.

--- a/Code/Mantid/.project
+++ b/Code/Mantid/.project
@@ -39,7 +39,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/Mantid/Build}</value>
+					<value>${workspace_loc:/Mantid/Release}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.useDefaultBuildCmd</key>
