First version of Framework Manager. Only basic functionality at the moment. Re #30.

--- a/Code/Mantid/.cproject
+++ b/Code/Mantid/.cproject
@@ -46,7 +46,7 @@
 </toolChain>
 </folderInfo>
 <sourceEntries>
-<entry excluding="Kernel/src/FrameworkManager.cpp|Build" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+<entry excluding="Build" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 </sourceEntries>
 </configuration>
 </storageModule>
