--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -38,9 +38,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				Optimization="0"
 				AdditionalIncludeDirectories="../../Third_Party/include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;POCO_DLL;WINVER=0x0500"
 				RuntimeLibrary="1"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -55,6 +57,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="PocoFoundationd.lib  PocoUtild.lib"
 				AdditionalLibraryDirectories="../../Third_Party/lib/win32"
+				GenerateDebugInformation="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -159,6 +162,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\AlgorithmManager.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\AnalysisDataService.cpp"
 				>
 			</File>
@@ -198,6 +205,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\AlgorithmFactory.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\AlgorithmManager.h"
 				>
 			</File>
 			<File
