re #60 corrected bug in the what section of tests. Changed solutions to link to the dll version of the C++ runtime

--- a/Code/Mantid/Kernel/test/MantidTest.properties
+++ b/Code/Mantid/Kernel/test/MantidTest.properties
@@ -7,4 +7,4 @@ logging.loggers.root.channel = fileChannel
 logging.channels.fileChannel.class = FileChannel
 logging.channels.fileChannel.path = sample.log
 logging.channels.fileChannel.formatter.class = PatternFormatter
-logging.channels.fileChannel.formatter.pattern = %s: {%p} %t
+logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
