Re #60 Updated logging formats

--- a/Code/Mantid/Kernel/test/Mantid.properties
+++ b/Code/Mantid/Kernel/test/Mantid.properties
@@ -5,6 +5,7 @@ mantid.legs = 6
 logging.loggers.root.level = information
 logging.loggers.root.channel = fileChannel
 logging.channels.fileChannel.class = FileChannel
-logging.channels.fileChannel.path = sample.log
+logging.channels.fileChannel.path = KernelTest.log
 logging.channels.fileChannel.formatter.class = PatternFormatter
-logging.channels.fileChannel.formatter.pattern = %s: {%p} %t
+logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
+
